--- a/style.css
+++ b/style.css
@@ -8,7 +8,24 @@ body {
   background-color: #070D4C;
 
 }
+
+.up-circle{
+  box-sizing: border-box;
+  position: absolute;
+  width: 2593.44px;
+  height: 540.22px;
+  left: -395px;
+  top: -380px;
+  border-radius: 350%;
+  background: #283469;
+  border: 1px solid #000000;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  transform: rotate(-13.97deg);
+} 
 .img{
-  width: 370;
-  height: 360;
+  position: absolute;
+  z-index: 2;
+  margin-top: 800px;
+  width: 270px;
+  height: 360px;
 }
