--- a/style.css
+++ b/style.css
@@ -6,7 +6,16 @@
 
 body {
   background-color: #070D4C;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  min-height: auto;
+  min-width: auto;
+  overflow: hidden;
 
+}
+.container{
+  display: flex;
 }
 
 .up-circle{
@@ -23,75 +32,58 @@ body {
   transform: rotate(-13.97deg);
   z-index: 1;
 } 
+
+
 .img{
 
   left: 395px;
   margin: 300px 0px 0px;
   position: absolute;
   z-index: 2;
-  width: 255px;
-  height: 260px;
+  width: 210px;
+  height: 225px;
 }
 
 /* ? */
 h1{
 position: absolute;
-width: 70px;
-height: 90px;
-left: 777px;
-top: 300px;
+width: 50px;
+height: 70px;
+left: 779px;
+top: 315px;
 margin: 0px 100px 0px 280px;
 font-family: 'Playwrite HR';
 font-weight: 400;
-font-size: 400px;
+font-size: 300px;
 line-height: 64px;
 letter-spacing: -0.25px;
 color: #070D4C;
 -webkit-text-stroke:10px #283469;
+animation: movit 3s ease-in-out infinite;
 }
-#rectangle1{
-  position: absolute;
-  width: 300.9px;
-  height: 48.85px;
-  left: 804px;
-  top: 549px;
-  margin: 10px 20px 50px 50px;
-  background: #283469;
-  border-radius: 25px;  
 
-}
-#rectangle2{
+.shape{
+  left: 930px;
+  top: 400px;
   position: absolute;
-  width: 300.9px;
-  height: 48.85px;
-  left: 1119px;
-  top: 430px;
-  margin: 10px 20px 50px 50px;
-  background: #283469;
-  border-radius: 25px; 
+  z-index: 2;
+  width: 410px;
+  height: 225px;
 }
-#circle{
-  /* Ellipse 3 */
-  
-position: relative;
-width: 217.31px;
-height: 233px;
-left: 1050px;
-top: 431.76px;
-background:conic-gradient(
-  #283469 0,
-  #283469 75%,
-  transparent 75%,
-  transparent 100%);
-  border-radius: 100px;
-/* transform: rotate(179.77deg); */
 
+@keyframes movit {
+  10% ,90%{
+    transform: rotate(4deg);
+  }
+  15%{
+    transform: rotate(-4deg);
+  }
 }
-#circle::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: #283469;
-  clip-path: inset(50% 50% 70% 50%);
+
+.new-content {
+  /* Styles for the new content */
+  display: none; /* This is essential to hide the new content initially */
+  border: 2px solid #00f;
+  padding: 20px;
+  background-color: #e0e0ff;
 }
