--- a/style.css
+++ b/style.css
@@ -3,7 +3,10 @@
   font-family: 'PlaywriteHR';
   src: url('PlaywriteHR-VariableFont_wght.ttf');
 }
-
+@font-face {
+  font-family: 'Jost';
+  src: url('Jost-VariableFont_wght.ttf');
+}
 body {
   background-color: #070D4C;
   display: flex;
@@ -91,8 +94,8 @@ animation: movit 3s ease-in-out infinite;
 }
 #quiz-selection, #quiz-container, #score-container {
   position: absolute;
-  width: 542px;
-  height: 575px;
+  width: 512px;
+  height: 545px;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -104,3 +107,67 @@ animation: movit 3s ease-in-out infinite;
   justify-content: center;
   z-index: 3;
 }
+#underline{
+
+  /* Line 2 */
+
+position: absolute;
+width: 476px;
+height: 0px;
+top: 91px;
+align-items: center;
+border: 1px solid #000000;
+margin-bottom: 54px;
+}
+#selection{
+  position:absolute;
+  font-family: 'Jost';
+  top: 20px;
+  font-weight:  400; 
+  font-size: 40px;
+  width: 356px; 
+  height: 21px;
+  text-align: center;
+  align-items: center;
+  display: flex;
+  letter-spacing: -0.25px;
+
+}
+
+
+.quiz-btn{
+  font-size: 35px;
+  color: #fff;
+  font-family: 'Jost';
+  position: absolute;
+  width: 437px;
+  height: 55px;
+  background: #283469;
+  border-radius: 10px;
+  margin-top: -170px;
+} 
+.quiz-btn1{
+  color: #fff;
+  font-size: 35px;
+  font-family: 'Jost';
+  position: absolute;
+  width: 437px;
+  height: 55px;
+  background: #283469;
+  border-radius: 10px;
+  margin-top: 71px;
+ 
+} 
+.quiz-btn2{
+  color: #fff;
+  font-size: 35px;
+  font-family: 'Jost';
+  position: absolute;
+  width: 437px;
+  height: 55px;
+  background: #283469;
+  border-radius: 10px;
+  margin-top: 315px;
+ 
+} 
+
